
####   Don't forget to change the version number in configure.ac!   ####

04 Dec 2005 tape close fixes (fixes tape devinit crash) - Fish
04 Dec 2005 Made misc/56 fix compile on gcc 3 through an ugly hack - Jay Maynard
04 Dec 2005 CTCT fixes - Fish
04 Dec 2005 More proper misc/56 fix (hopefully) - Fish
04 Dec 2005 Relax SYSEPOCH restrictions - Jan Jaeger
04 Dec 2005 New clock design - Jan Jaeger
04 Dec 2005 OS X portability fixes - Jay Maynard
04 Dec 2005 misc/56: Brute force fix for segfault in some panel commands - Jay Maynard
04 Dec 2005 Fix error in sha-1 message digest - Roger Bowler
03 Dec 2005 Fix fillfnam.c problem debugged by bb5ch39t - Greg Smith
03 Dec 2005 misc/29: SHCMDOPT shell command disablement cfg stmt - Fish
03 Dec 2005 Add crypto files to VS8 vcproj file - Fish
03 Dec 2005 Fix MSVC conspawn/shell cmd glitch: CREATE_NO_WINDOW - Fish
03 Dec 2005 Temp fix to allow up to 1031 cckd devices - Greg Smith
03 Dec 2005 CMPSC no siblings check after 4th/5th child - Bernard/Jacques Dilbert
02 Dec 2005 Added 'conspawn.exe' to MSVC build (for 'sh'ell cmd) - Fish
01 Dec 2005 Volker fix to MSVC makefile for VS 8.0 "manifest" files - Fish
01 Dec 2005 dyngui: SetCurrentDirectory support for shell commands - Fish
01 Dec 2005 Fix things so BOTH print-to-pipe AND 'sh'ell command work - Fish
29 Nov 2005 build_msc/45, printer/24: Poor man's fork for MSVC builds - Fish
28 Nov 2005 enable ATTR_REGPARM performance option for MSVC builds - Fish
28 Nov 2005 enable machine assists in machdep.h for MSVC VC7 compiler - Fish
28 Nov 2005 Fix concpy bug discovered by Fish - Greg Smith
27 Nov 2005 drop support for MSVC static/dll builds; keep only dllmod - Fish
27 Nov 2005 Drop support for makefile.msvc and makefile-dll.msvc - Roger Bowler
27 Nov 2005 Replace crypto support modules by BSD licensed versions - Roger Bowler
26 Nov 2005 Modify status line in panel.c for ESA/390 under z/SIE - Jan Jaeger
24 Nov 2005 Accept "z/Arch" as synonym for "ESAME" archmode - Fish